Fix pagination overflowing on smaller screens

--- a/public/css/logixRelease.css
+++ b/public/css/logixRelease.css
@@ -110,3 +110,52 @@ a.btn.btn-outline-danger {
 }
 
 
+.pagination .page-link {
+    white-space: nowrap;
+}
+
+@media (max-width: 992px) {
+    .pagination {
+        display: grid;
+        grid-template-columns: 100px repeat(8, 1fr) 100px;
+        grid-template-rows: repeat(2, 1fr);
+    }
+
+    .pagination > :first-child {
+        grid-row: 1 / -1;
+        grid-column: 1;
+    }
+
+    .pagination > :last-child {
+        grid-row: 1 / -1;
+        grid-column: -2;
+    }
+
+    .pagination .page-link, .pagination .page-item, .pagination .mr2 {
+        display: flex;
+        width: 100%;
+        height: 100%;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .pagination .mr2 {
+        border: 1px solid #dee2e6;
+    }
+}
+
+@media (max-width: 700px) {
+    .pagination {
+        display: grid;
+        grid-template-columns: 100px repeat(5, 1fr) 100px;
+        grid-template-rows: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 500px) {
+    .pagination {
+        display: grid;
+        grid-template-columns: 100px repeat(3, 1fr) 100px;
+        grid-template-rows: repeat(5, 1fr);
+    }
+}
